# flash-algorithm-template

./: Cargo.toml  README.md  calculate-memory.rhai  cargo-generate.toml  link.x  template.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
xtask/: Cargo.toml
xtask/src/: export.rs  iterate.rs  main.rs
