[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
xshell = { version = "0.2", default-features = false }
clap = { version = "4", default-features = false, features = ["std", "derive"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
cargo_metadata = { version = "0.15", default-features = false }
color-eyre = { version = "0.6", default-features = false }
probe-rs = { version = "0.14", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-cli-util = { version = "0.14", git = "https://github.com/probe-rs/probe-rs" }
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
